--- a/templates/base.html
+++ b/templates/base.html
@@ -24,11 +24,11 @@
           <ul class="navbar-nav mr-auto">
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#">- Reconnaissance</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#">- Scanning</a>
             </li>
 
           </ul>
