--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
     function Redirect() {
         var domain = document.getElementById("domain").value;
-        window.location.href = 'target/' + domain;
+        window.location.href = 'reconnaissance/' + domain;
     }    
     
 </script>
