--- a/templates/template.html
+++ b/templates/template.html
@@ -28,11 +28,7 @@
           <ul class="navbar-nav mr-auto">
 
             <li class="nav-item">
-              <a class="nav-link" href="#"></a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="#"></a>
+              <a class="nav-link" href="/">Home</a>
             </li>
 
           </ul>
