--- a/templates/reconnaissance.html
+++ b/templates/reconnaissance.html
@@ -42,12 +42,18 @@
 <div class="progress">
   <div id="amass" class="progress-bar" role="progressbar" style="width: 25%" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
+<a style="display: none;" href="">Amass result</a>
+<a href="">Amass result</a>
+
+<p></p>
 
 <div>Nmap:</div>
 
 <div class="progress">
   <div id="nmap" class="progress-bar" role="progressbar" style="width: 0%" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
+
+<p></p>
 
 <div>Screenshot:</div>
 
