--- a/templates/template.html
+++ b/templates/template.html
@@ -28,7 +28,11 @@
           <ul class="navbar-nav mr-auto">
 
             <li class="nav-item">
-              <a class="nav-link" href="/">Home</a>
+              <a class="nav-link" href="/">°Scan</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="/results">°Results</a>
             </li>
 
           </ul>
