--- a/templates/reconnaissance.html
+++ b/templates/reconnaissance.html
@@ -11,7 +11,7 @@
   $(document).ready(function(){
     document.getElementById("amass-output").href= "/static/targets/" + domain + "/amass.txt";
     document.getElementById("nmap-output").href= "/static/targets/" + domain + "/nmap_clean.txt";
-    document.getElementById("screenshot-output").href= "/static/targets/" + domain + "/nmap_clean.txt";
+    document.getElementById("screenshot-output").href= "/results/" + domain + "/prints/";
 
     Amass();
   });
@@ -107,7 +107,7 @@
 <div>Screenshot:</div>
 
 <div class="progress">
-  <div id="screenshot-progress" class="progress-bar" role="progressbar" style="width: 25%" aria-valuemin="0" aria-valuemax="100"></div>
+  <div id="screenshot-progress" class="progress-bar" role="progressbar" style="width: 0%" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
 <a id="screenshot-output" target="_blank" href="" style="display: none">Screenshot result</a>
 
